--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,16 @@
   </head>
 
   <body class="p-4">
+    <img src="img/logo_multisearch.png" />
     <div class="search-box">
       <input
         class="search-text"
         type="text"
         placeholder="Faça a sua pesquisa"
       />
+    </div>
+    <div class="button-search">
+      <button>
     </div>
   </body>
 </html>
