--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       />
     </div>
     <div class="button-search">
-      <button>
+      <button class="btn-search">Pesquisar</button>
     </div>
   </body>
 </html>
