--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,7 +19,9 @@
         type="text"
         placeholder="Faça a sua pesquisa"
       />
-      <button class="btn-search">Pesquisar</button>
+      <button class="btn-search">
+        <i class="fa fa-search"></i>
+      </button>
     </div>
   </body>
 </html>
